# scribe

./: .buildinfo  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  check_gpu.sh  genindex.html  index.html  infer.py  infer_split.py  installation.html  mkdocs.yml  objects.inv  properdocs.yml  py-modindex.html  pyproject.toml  quickoverview.html  quickstart.html  results.html  run_hydra.py  search.html  searchindex.js  sg_execution_times.html  sherlock_h100.sh  sherlock_nbvcp_h100.sh  visualize.py  viz_hydra.py  viz_utils.py
.github/workflows/: docs.yml
_dummy_examples/: README.html
_dummy_gallery/: index.html  sg_execution_times.html
_modules/: index.html
_modules/scribe/: models.html  models_mix.html  results.html  sampling.html  stats.html  svi.html  utils.html  viz.html
_sources/: index.rst.txt  quickstart.rst.txt  results.rst.txt
_sources/_dummy_examples/: README.rst.txt
_sources/_dummy_gallery/: index.rst.txt  sg_execution_times.rst.txt
_sources/api/: index.rst.txt  models.rst.txt  models_mix.rst.txt  results.rst.txt  sampling.rst.txt  stats.rst.txt  svi.rst.txt  utils.rst.txt  viz.rst.txt
_sources/examples/: README.rst.txt  custom_model.rst.txt
_sources/models/: index.rst.txt  models_mix.rst.txt  zinb.rst.txt  zinbvcp.rst.txt
api/: index.html  models.html  models_mix.html  results.html  sampling.html  stats.html  svi.html  utils.html  viz.html
auto_examples/: quickstart.html  sg_execution_times.html
conf/: README.md  config.yaml
contributing/: index.html
docs/: AMORTIZED_POSTERIOR_SAMPLING_TRACE.md  cli_infer.md  cli_visualize.md  contributing.md  gen_ref_pages.py  index.md
examples/: GALLERY_HEADER.html  README.html  custom_model.html  index.html
getting-started/: index.html
guide/: index.html
javascripts/: mathjax.js
models/: index.html  models.html  models_mix.html  nbdm.html  nbvcp.html  zinb.html  zinbvcp.html
notes/: refactor-broadcasting-layout-dict.md  stable-training-normalizing-flows.md
paper/: _beta_negative_binomial.qmd  _capture_prior.qmd  _denoising.qmd  _diffexp01.qmd  _diffexp02.qmd  _diffexp03.qmd  _diffexp04.qmd  _diffexp05.qmd  _diffexp06.qmd  _diffexp07.qmd  _diffexp08.qmd  _diffexp09.qmd  _diffexp10.qmd  _diffexp11.qmd  _diffexp12.qmd  _diffexp13.qmd  _diffexp14.qmd  _diffexp_compositional_robustness.qmd  _diffexp_lnm_pln_robustness.qmd  _diffexp_nbln_robustness.qmd  _dirichlet_multinomial.qmd  _goodness_of_fit.qmd  _grn_biophysics.qmd  _guide_reparam.qmd  _hierarchical_datasets.qmd  _hierarchical_gate.qmd  _hierarchical_p.qmd  _joint_low_rank_guide.qmd  _lnm_biophysics.qmd  _loadings_shrinkage_priors.qmd  _logistic_normal_multinomial.qmd  _mean_anchoring_prior.qmd  _mixture_weights_svi.qmd  _model_comparison.qmd  _nb_lognormal.qmd  _normalization.qmd  _poisson_lognormal.qmd  _preamble.tex  _quarto.yml  _singer_dataset.qmd  (+22 more)
sandbox/: MWC_inference.ipynb  adaptive_two-state_bayesflow.ipynb  dirichlet_multinomial.py  dirichlet_multinomial_advi.py  dirichlet_multinomial_bayesflow.py  dirichlet_multinomial_gpu_bayesflow.py  dirichlet_multinomial_numba_bayesflow.py  dirichlet_multinomial_rescale_bayesflow.py  growth_rate_inference.ipynb  kummers_function.ipynb  mixture_test.py  models_mix_split.py  multivariate_gaussian.ipynb  nbdm_custom_guide.py  negative_binomial_bayesflow.py  negative_binomials_tensorflow_bayesflow.py  negbinom_01dim_10000obs_bayesflow.py  negbinom_01dim_1000obs_bayesflow.py  negbinom_01dim_100obs_bayesflow.py  nevative_binomials_bayesflow.py  results_split.py  scmark_NBVCP_numpyro.py  scmark_SVI_numpyro.py  scmark_pymc.ipynb  scmark_two-state_mcmc.ipynb  sim_SIV_zinb_numpyro.py  sim_SVI_numpyro.py  smFISH_NUTS_numpyro.py  smFISH_SVI_numpyro.py  smFISH_pymc.ipynb  two-state_bayesflow.ipynb  two-state_eda.ipynb  two-state_log_bayesflow.py  two-state_log_ratio.py  two-state_mcmc.ipynb  two-state_neg-binom.ipynb  utils.py
scribe/: __init__.py  cell_assignment.py  cell_type_assignment.py  distributions.py  inference.py  mcmc.py  model_comparison.py  model_config.py  model_registry.py  models.py  models_mix.py  models_mix_log.py  models_twostate.py  models_unconstrained.py  models_unconstrained_mix.py  numpyro_kl_patch.py  results.py  results_mcmc.py  results_new.py  results_svi.py  sampling.py  stats.py  svi.py  twostate.py  utils.py  viz.py
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  _synthetic_results.py  bench_twostate_ln_rate.py  conftest.py  test_affine_coupling.py  test_annotation_prior.py  test_axis_layout.py  test_biological_ppc.py  test_bnb.py  test_builders.py  test_capture_prior.py  test_catalog.py  test_cli_legacy_prior_fold.py  test_component_pruning_subset.py  test_compositional_ppc.py  test_corner_ppc.py  test_covariate_embedding.py  test_custom.py  test_data_loader.py  test_de_biological.py  test_de_divergences.py  test_de_empirical.py  test_de_extract.py  test_de_factors.py  test_de_gene_level.py  test_de_nbln_tsln_compare.py  test_de_results.py  test_de_set_level.py  test_de_shrinkage.py  test_de_transformations.py  test_de_utils.py  test_decoder.py  test_decorrelate_other_column_scaffolding.py  test_decoupled_prior.py  test_decoupled_prior_distribution.py  test_denoising.py  test_dpvae.py  test_encoder.py  test_factor_effect_view.py  test_factor_layout.py  (+108 more)
theory/: index.html
tutorials/: 5050_jurkat_293t.py  jurkat_cells.html  jurkat_cells.py  jurkat_cells_nbln.py  k562_cells_twostate.html  zhao_2021_hierarchical.html  zhao_2021_model_comparison.html  zhao_2021_model_comparison.py
viz_utils/: README.md  __init__.py  _common.py  annotation_ppc.py  bio_ppc.py  cache.py  capture_anchor.py  dispatch.py  ecdf.py  gene_selection.py  loss.py  mean_calibration.py  mixture_ppc.py  mu_pairwise.py  ppc.py  ppc_rendering.py  umap.py
(+1233 files in other folders)
