[project]
name = "scribe"
version = "0.1.0"
description = "A package for single-cell RNA sequencing data analysis using variational inference"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Manuel Razo" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]

# Core dependencies
dependencies = [
    "anndata>=0.12.10",
    "graphviz>=0.20.3",
    "matplotlib>=3.9.3",
    "myst-parser>=4.0.0",
    "numpy>=2.1.3,<2.2",
    "pandas>=2.2.3",
    "scanpy>=1.12",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "statsmodels>=0.14.4",
    "jax[cuda12]>=0.9.0.1",
    "numpyro>=0.19.0",
    "multipledispatch>=1.0.0",
    "flax>=0.12.2",
    "sphinx-gallery>=0.19.0",
    "pydantic>=2.12.3",
    "rich>=14.0.0",
    "orbax>=0.1.9",
]

# Development dependencies
[dependency-groups]
dev = [
    "arviz>=0.20.0",
    "ipykernel>=6.29.5",
    "corner>=2.2.3",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "notebook>=7.4.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mpl>=0.17.0",
    "umap-learn>=0.5.7",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2",
    "omegaconf>=2.3.0",
    "scikit-misc>=0.5.1",
    "bokeh>=3.8.0",
    "colorcet>=3.1.0",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "scikit-image>=0.25.2",
    "marimo>=0.19.11",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80
