[project]
name = "scribe"
version = "0.1.0"
description = "A package for single-cell RNA sequencing data analysis using variational inference"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Manuel Razo" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3"
]

# Core dependencies
dependencies = [
    "anndata>=0.12.10",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3,<2.2",
    "pandas>=2.2.3",
    "scanpy>=1.12",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "jax[cuda12]>=0.10.1",
    "numpyro>=0.21.0",
    "multipledispatch>=1.0.0",
    "flax>=0.12.2",
    "pydantic>=2.12.3",
    "rich>=14.0.0",
    "orbax>=0.1.9",
    "marimo>=0.23.3",
]

[project.optional-dependencies]
# CLI/Hydra workflows are intentionally optional so base `import scribe`
# stays dependency-light.
hydra = [
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2",
    "hydra-submitit-launcher>=1.2.0",
    "omegaconf>=2.3.0",
]

[project.scripts]
scribe-infer = "scribe.cli.infer:main"
scribe-visualize = "scribe.cli.visualize:main"

# Development dependencies
[dependency-groups]
dev = [
    "arviz>=0.20.0",
    "ipykernel>=6.29.5",
    "corner>=2.2.3",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
    "notebook>=7.4.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mpl>=0.17.0",
    "umap-learn>=0.5.7",
    "scikit-misc>=0.5.1",
    "bokeh>=3.8.0",
    "colorcet>=3.1.0",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "scikit-image>=0.25.2",
    "marimo>=0.23.1",
    "gseapy>=1.1.11",
    "matplotlib-venn>=1.1.2",
    "h5py>=3.12.1",
    "anndata>=0.12.10",
]

paper = [
    "pertpy>=1.1.1",
    "pydeseq2>=0.5.4",
    "rapids-singlecell-cu12[rapids]>=0.15.0",
]

docs = [
    "properdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mkdocs-marimo>=0.2.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
cudf-cu12 = { index = "nvidia" }
cuml-cu12 = { index = "nvidia" }
cugraph-cu12 = { index = "nvidia" }
cuvs-cu12 = { index = "nvidia" }

[tool.setuptools.package-data]
"scribe.cli.templates" = ["conf/**/*"]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["scribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put tests/ on sys.path so shared, non-collected helper modules (e.g.
# _synthetic_results.py) are importable as top-level modules from any subfolder.
pythonpath = ["tests"]

[tool.black]
line-length = 80
